# marathon-analysis

./: .gitignore  README.md  pyproject.toml
src/marathon_analysis/: load_data.py  main.py
src/marathon_analysis/ops/: find_runner.py
src/marathon_analysis/utils/: datetime_utils.py
