[project]
name = "marathon-analysis"
version = "0.0.1"
description = "A project for analyzing marathon race results"
readme = "README.md"
authors = [
    { email = "jcbball55@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "kagglehub>=0.4.0",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
]

[project.scripts]
marathon = "marathon_analysis.main:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
